--- a/Interior Design/css/quiz.css
+++ b/Interior Design/css/quiz.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 @import url("https://fonts.googleapis.com/css2?family=Spectral&display=swap");
 
 * {
@@ -489,7 +487,7 @@ h6 {
 .popup-thanks__subtitle {
   line-height: 20px;
   font-size: calc(16px + 2 * ((100vw - 320px) / 1600));
-  padding-bottom: 70px;
+  padding-bottom: 20px;
 }
 
 .popup-thanks__socials-text {
@@ -2398,6 +2396,8 @@ h6 {
 }
 
 .callback__container {
+  padding-top: 40px;
+  padding-bottom: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2405,15 +2405,11 @@ h6 {
 
 .contacts {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 23%;
-          flex: 0 1 23%;
-  padding: 0px 10px 40px;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
 }
 
 .contact__body {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2421,7 +2417,8 @@ h6 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 200px;
+  height: 100%;
+  padding-right: 10px;
 }
 
 .callback__blocks {
@@ -2460,47 +2457,6 @@ h6 {
   padding-bottom: 13px;
 }
 
-.inlive {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 32%;
-          flex: 0 1 32%;
-  max-width: 429px;
-  padding: 0px 10px 40px;
-}
-
-.inlive__imgs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.inlive__item {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 47%;
-          flex: 0 1 47%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.inlive__item img {
-  margin-bottom: 15px;
-  max-width: 100%;
-  border-radius: 10px;
-}
-
 .footer-office__img_desktop {
   max-height: 200px;
   margin-bottom: 15px;
@@ -2517,24 +2473,11 @@ h6 {
   display: none;
 }
 
-.inlive__description {
-  display: block;
-  color: #959595;
-  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
-  padding-bottom: 5px;
-}
-
-.inlive-text {
-  display: block;
-  font-size: calc(12px + 2 * ((100vw - 320px) / 1600));
-  line-height: 16px;
-}
-
 .callback-map {
   position: relative;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 45%;
-          flex: 0 1 45%;
+      -ms-flex: 0 1 66.666%;
+          flex: 0 1 66.666%;
   min-height: 400px;
   max-height: 426px;
 }
@@ -2546,30 +2489,13 @@ h6 {
 }
 
 .map__body {
-  width: 100%;
   height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  overflow: hidden;
-}
-
-.map__body:after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-image: -o-radial-gradient(transparent, #fff);
-  background-image: radial-gradient(transparent, #fff);
-  opacity: 1;
-  pointer-events: none;
+  position: relative;
 }
 
 .footer__body {
   width: 100%;
+  border-top: 1px solid #333333;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2579,25 +2505,50 @@ h6 {
           justify-content: space-between;
 }
 
+.footer__contact {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 30px;
+}
+
+.footer__call {
+  margin-bottom: 30px;
+}
+
+.footer-column__contacts {
+  margin-top: auto;
+}
+
 .footer__logo {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 33.333%;
-          flex: 0 1 33.333%;
+  width: 100%;
+  max-width: 180px;
+  max-height: 60px;
+}
+
+.footer__logo img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
 .footer__defend {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 33.333%;
           flex: 0 1 33.333%;
-  text-align: center;
 }
 
-.footer__defend .popup__info {
-  max-width: 100%;
-}
-
-.footer__defend .popup__info a {
-  display: block;
+.footer__defend a {
+  font-size: 12px;
+  line-height: 135%;
+  border-bottom: 1px solid #B99C5D;
+  color: #B99C5D;
 }
 
 .footer__create {
@@ -2625,9 +2576,20 @@ h6 {
           align-items: center;
 }
 
+.create__text {
+  display: inline-block;
+  padding-bottom: 5px;
+}
+
 .footer_b {
   font-weight: 500;
   color: #373737;
+}
+
+.defend-text {
+  max-width: 245px;
+  display: block;
+  padding-bottom: 10px;
 }
 
 .line {
@@ -2898,60 +2860,33 @@ h6 {
 }
 
 .ymaps-2-1-77-ground-pane {
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  -webkit-filter: grayscale(100%) brightness(80%) invert(100%);
+          filter: grayscale(100%) brightness(80%) invert(100%);
   filter: url(/img/filters.svg#grayscale);
-  -webkit-filter: grayscale(1);
+  -webkit-filter: grayscale(1) brightness(80%) invert(100%);
 }
 
-.ymaps-2-1-77-balloon__tail {
-  display: none !important;
+.ymaps-2-1-77-image {
+  background-size: 100px 55px !important;
+  width: 100px !important;
+  height: 55px !important;
 }
 
-.ymaps-2-1-77-balloon {
-  border-radius: 10px;
-  top: 40px !important;
-  left: -150px !important;
-  -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15), 0 5px 15px -7px rgba(255, 255, 255, 0.5) !important;
-          box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15), 0 5px 15px -7px rgba(255, 255, 255, 0.5) !important;
+.ymaps-2-1-77-map {
+  width: auto !important;
 }
 
-.ymaps-2-1-77-balloon:before {
-  content: 'Адрес';
-  display: block;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
-  text-align: center;
-  top: -53%;
-  padding-top: 6px;
-  font-size: calc(12px + 4 * ((100vw - 320px) / 1600));
-  line-height: 19px;
-  width: 174.03px;
-  border-radius: 10px;
-  height: 28px;
+.arrow__link {
   position: absolute;
-  background: #fff url("../img/footer/map.svg") top 8px left 43px/14px 14px no-repeat;
+  width: 57px;
+  height: 57px;
+  bottom: 0;
+  right: -70px;
 }
 
-.ymaps-2-1-77-balloon__content {
-  text-align: center;
-  font-family: Gilroy !important;
-}
-
-.map__baloon {
-  font-weight: 500;
-  font-size: calc(16px + 4 * ((100vw - 320px) / 1600));
-  line-height: 137.5%;
-  display: block;
-  position: relative;
-}
-
-.map__baloon-2 {
-  font-weight: 300;
-  font-size: calc(12px + 4 * ((100vw - 320px) / 1600));
-  color: #373737;
+.arrow__link img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 476.98px) {
@@ -2965,6 +2900,12 @@ h6 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+}
+
+@media (min-width: 767.98px) {
+  .contacts {
+    min-width: 300px;
   }
 }
 
@@ -3135,6 +3076,17 @@ h6 {
   .present-end__img img {
     margin-left: -5%;
   }
+
+  .contact__body {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-right: 0px;
+  }
+
+  .arrow__link {
+    display: none;
+  }
 }
 
 @media (max-width: 1170px) {
@@ -3275,15 +3227,6 @@ h6 {
     padding-bottom: 0;
   }
 
-  .inlive__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-
   .footer-office__img_desktop {
     display: none;
   }
@@ -3294,10 +3237,6 @@ h6 {
     height: 100px;
     width: 200px;
     border-radius: 10px;
-  }
-
-  .inlive-text {
-    text-align: center;
   }
 }
 
@@ -3361,6 +3300,10 @@ h6 {
 
   .header__top .top-header__logo_active {
     display: none;
+  }
+
+  .contacts-header__call {
+    text-align: center;
   }
 
   .menu-header {
@@ -3525,24 +3468,31 @@ h6 {
 
   .contacts {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-  }
-
-  .inlive {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-  }
-
-  .inlive-text {
-    line-height: 14px;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    padding: 30px 0px 40px 0px;
   }
 
   .callback-map {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 100%;
             flex: 0 1 100%;
+  }
+
+  .footer__contact .mobile-column__contacts {
+    text-align: center;
+  }
+
+  .footer__contact .mobile-location img {
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    left: 50%;
+  }
+
+  .footer__logo {
+    max-width: 96px;
+    max-height: 35px;
   }
 }
 
@@ -3819,13 +3769,9 @@ h6 {
             justify-content: center;
   }
 
-  .footer__logo {
-    margin: auto;
-    padding-bottom: 15px;
-  }
-
   .footer__defend {
     padding-bottom: 15px;
+    text-align: center;
   }
 
   .footer__create {
@@ -3833,17 +3779,13 @@ h6 {
         -ms-flex-pack: center;
             justify-content: center;
   }
-}
 
-@media (max-width: 490.98px) {
-  .contact__body {
+  .defend-text {
     margin: auto;
   }
 
-  .inlive {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
+  .ymaps-2-1-77-map {
+    max-height: 240px !important;
   }
 }
 
@@ -3854,14 +3796,6 @@ h6 {
 
   .steps-middle__content {
     width: 100%;
-  }
-}
-
-@media (max-width: 450.98px) {
-  .contacts {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
   }
 }
 
