--- a/Interior Design/css/style.css
+++ b/Interior Design/css/style.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 @import url("https://fonts.googleapis.com/css2?family=Spectral&display=swap");
 
 * {
@@ -560,7 +558,7 @@ h6 {
 .popup-thanks__subtitle {
   line-height: 20px;
   font-size: calc(16px + 2 * ((100vw - 320px) / 1600));
-  padding-bottom: 70px;
+  padding-bottom: 20px;
 }
 
 .popup-thanks__socials-text {
@@ -872,16 +870,16 @@ h6 {
   color: #B99C5D;
 }
 
+.menu-main__contact {
+  padding-top: 70px;
+}
+
 .mobile-column__contacts {
-  padding-bottom: 40px;
+  padding-bottom: 30px;
   display: inline-block;
   position: relative;
   color: #373737;
   font-weight: 500;
-}
-
-.mobile-column__contacts a {
-  color: #373737;
 }
 
 .mobile-column__contacts:last-child {
@@ -891,10 +889,6 @@ h6 {
 
 .mobile-column__contacts:last-child:after {
   height: 0px;
-}
-
-.mobile-location__top {
-  padding-bottom: 15px;
 }
 
 .mobile-location {
@@ -910,9 +904,16 @@ h6 {
 
 .mobile-column__text {
   display: block;
+  padding-bottom: 5px;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  color: #FFFFFF;
 }
 
 .mobile-location__text-top {
+  display: block;
+  padding-bottom: 5px;
   font-weight: 500;
   font-size: 18px;
   line-height: 120%;
@@ -970,7 +971,7 @@ h6 {
           align-items: center;
   right: 96%;
   bottom: 5%;
-  z-index: 5;
+  z-index: 6;
 }
 
 .sticky-link {
@@ -3999,8 +4000,8 @@ h6 {
 
 .accordion__items {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 70%;
-          flex: 0 1 70%;
+      -ms-flex: 0 1 65%;
+          flex: 0 1 65%;
   padding-top: 20px;
   padding-right: 4%;
 }
@@ -4495,9 +4496,12 @@ h6 {
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 0.5rem;
   grid-row-gap: 0.5rem;
+  overflow: hidden;
 }
 
 #instafeed a {
+  border-radius: 4px;
+  overflow: hidden;
   display: block;
 }
 
@@ -4746,6 +4750,8 @@ h6 {
 }
 
 .callback__container {
+  padding-top: 40px;
+  padding-bottom: 30px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4753,15 +4759,11 @@ h6 {
 
 .contacts {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 23%;
-          flex: 0 1 23%;
-  padding: 0px 10px 40px;
+      -ms-flex: 0 1 33.333%;
+          flex: 0 1 33.333%;
 }
 
 .contact__body {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4769,7 +4771,8 @@ h6 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  max-width: 200px;
+  height: 100%;
+  padding-right: 10px;
 }
 
 .callback__blocks {
@@ -4808,47 +4811,6 @@ h6 {
   padding-bottom: 13px;
 }
 
-.inlive {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 32%;
-          flex: 0 1 32%;
-  max-width: 429px;
-  padding: 0px 10px 40px;
-}
-
-.inlive__imgs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.inlive__item {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 47%;
-          flex: 0 1 47%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.inlive__item img {
-  margin-bottom: 15px;
-  max-width: 100%;
-  border-radius: 10px;
-}
-
 .footer-office__img_desktop {
   max-height: 200px;
   margin-bottom: 15px;
@@ -4865,24 +4827,11 @@ h6 {
   display: none;
 }
 
-.inlive__description {
-  display: block;
-  color: #959595;
-  font-size: calc(14px + 2 * ((100vw - 320px) / 1600));
-  padding-bottom: 5px;
-}
-
-.inlive-text {
-  display: block;
-  font-size: calc(12px + 2 * ((100vw - 320px) / 1600));
-  line-height: 16px;
-}
-
 .callback-map {
   position: relative;
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 45%;
-          flex: 0 1 45%;
+      -ms-flex: 0 1 66.666%;
+          flex: 0 1 66.666%;
   min-height: 400px;
   max-height: 426px;
 }
@@ -4894,30 +4843,13 @@ h6 {
 }
 
 .map__body {
-  width: 100%;
   height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  overflow: hidden;
-}
-
-.map__body:after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background-image: -o-radial-gradient(transparent, #fff);
-  background-image: radial-gradient(transparent, #fff);
-  opacity: 1;
-  pointer-events: none;
+  position: relative;
 }
 
 .footer__body {
   width: 100%;
+  border-top: 1px solid #333333;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -4927,25 +4859,50 @@ h6 {
           justify-content: space-between;
 }
 
+.footer__contact {
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding-top: 30px;
+}
+
+.footer__call {
+  margin-bottom: 30px;
+}
+
+.footer-column__contacts {
+  margin-top: auto;
+}
+
 .footer__logo {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 33.333%;
-          flex: 0 1 33.333%;
+  width: 100%;
+  max-width: 180px;
+  max-height: 60px;
+}
+
+.footer__logo img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 100%;
+  height: 100%;
 }
 
 .footer__defend {
   -webkit-box-flex: 0;
       -ms-flex: 0 1 33.333%;
           flex: 0 1 33.333%;
-  text-align: center;
 }
 
-.footer__defend .popup__info {
-  max-width: 100%;
-}
-
-.footer__defend .popup__info a {
-  display: block;
+.footer__defend a {
+  font-size: 12px;
+  line-height: 135%;
+  border-bottom: 1px solid #B99C5D;
+  color: #B99C5D;
 }
 
 .footer__create {
@@ -4973,9 +4930,20 @@ h6 {
           align-items: center;
 }
 
+.create__text {
+  display: inline-block;
+  padding-bottom: 5px;
+}
+
 .footer_b {
   font-weight: 500;
   color: #373737;
+}
+
+.defend-text {
+  max-width: 245px;
+  display: block;
+  padding-bottom: 10px;
 }
 
 .line {
@@ -5246,60 +5214,33 @@ h6 {
 }
 
 .ymaps-2-1-77-ground-pane {
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  -webkit-filter: grayscale(100%) brightness(80%) invert(100%);
+          filter: grayscale(100%) brightness(80%) invert(100%);
   filter: url(/img/filters.svg#grayscale);
-  -webkit-filter: grayscale(1);
+  -webkit-filter: grayscale(1) brightness(80%) invert(100%);
 }
 
-.ymaps-2-1-77-balloon__tail {
-  display: none !important;
+.ymaps-2-1-77-image {
+  background-size: 100px 55px !important;
+  width: 100px !important;
+  height: 55px !important;
 }
 
-.ymaps-2-1-77-balloon {
-  border-radius: 10px;
-  top: 40px !important;
-  left: -150px !important;
-  -webkit-box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15), 0 5px 15px -7px rgba(255, 255, 255, 0.5) !important;
-          box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15), 0 5px 15px -7px rgba(255, 255, 255, 0.5) !important;
+.ymaps-2-1-77-map {
+  width: auto !important;
 }
 
-.ymaps-2-1-77-balloon:before {
-  content: 'Адрес';
-  display: block;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
-  text-align: center;
-  top: -53%;
-  padding-top: 6px;
-  font-size: calc(12px + 4 * ((100vw - 320px) / 1600));
-  line-height: 19px;
-  width: 174.03px;
-  border-radius: 10px;
-  height: 28px;
+.arrow__link {
   position: absolute;
-  background: #fff url("../img/footer/map.svg") top 8px left 43px/14px 14px no-repeat;
+  width: 57px;
+  height: 57px;
+  bottom: 0;
+  right: -70px;
 }
 
-.ymaps-2-1-77-balloon__content {
-  text-align: center;
-  font-family: Gilroy !important;
-}
-
-.map__baloon {
-  font-weight: 500;
-  font-size: calc(16px + 4 * ((100vw - 320px) / 1600));
-  line-height: 137.5%;
-  display: block;
-  position: relative;
-}
-
-.map__baloon-2 {
-  font-weight: 300;
-  font-size: calc(12px + 4 * ((100vw - 320px) / 1600));
-  color: #373737;
+.arrow__link img {
+  width: 100%;
+  height: 100%;
 }
 
 @media (min-width: 476.98px) {
@@ -5367,6 +5308,10 @@ h6 {
 
   .design__text {
     max-width: 386px;
+  }
+
+  .contacts {
+    min-width: 300px;
   }
 }
 
@@ -5687,6 +5632,17 @@ h6 {
   .design__paragraph {
     min-width: 310px;
   }
+
+  .contact__body {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-right: 0px;
+  }
+
+  .arrow__link {
+    display: none;
+  }
 }
 
 @media (max-width: 1170px) {
@@ -5999,15 +5955,6 @@ h6 {
     padding-bottom: 40px;
   }
 
-  .inlive__item {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-
   .footer-office__img_desktop {
     display: none;
   }
@@ -6018,10 +5965,6 @@ h6 {
     height: 100px;
     width: 200px;
     border-radius: 10px;
-  }
-
-  .inlive-text {
-    text-align: center;
   }
 }
 
@@ -6094,6 +6037,27 @@ h6 {
             flex: 0 0 50%;
   }
 
+  .menu-main__contact .mobile-column__contacts {
+    text-align: left;
+  }
+
+  .menu-main__contact .mobile-location img {
+    left: 0px;
+  }
+
+  .mobile-column__contacts {
+    display: block;
+  }
+
+  .mobile-location {
+    padding-left: 0;
+    padding-top: 30px;
+  }
+
+  .mobile-location img {
+    top: -5px;
+  }
+
   .header__body_active {
     margin-top: 56px;
   }
@@ -6124,6 +6088,10 @@ h6 {
 
   .header__top .top-header__logo_active {
     display: none;
+  }
+
+  .contacts-header__call {
+    text-align: center;
   }
 
   .menu-header {
@@ -6434,24 +6402,31 @@ h6 {
 
   .contacts {
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-  }
-
-  .inlive {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 50%;
-            flex: 0 1 50%;
-  }
-
-  .inlive-text {
-    line-height: 14px;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
+    padding: 30px 0px 40px 0px;
   }
 
   .callback-map {
     -webkit-box-flex: 0;
         -ms-flex: 0 1 100%;
             flex: 0 1 100%;
+  }
+
+  .footer__contact .mobile-column__contacts {
+    text-align: center;
+  }
+
+  .footer__contact .mobile-location img {
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    left: 50%;
+  }
+
+  .footer__logo {
+    max-width: 96px;
+    max-height: 35px;
   }
 }
 
@@ -6972,6 +6947,10 @@ h6 {
     top: 39%;
   }
 
+  #instafeed {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   .callback__title {
     padding-top: 20px;
   }
@@ -6990,13 +6969,9 @@ h6 {
             justify-content: center;
   }
 
-  .footer__logo {
-    margin: auto;
-    padding-bottom: 15px;
-  }
-
   .footer__defend {
     padding-bottom: 15px;
+    text-align: center;
   }
 
   .footer__create {
@@ -7004,17 +6979,13 @@ h6 {
         -ms-flex-pack: center;
             justify-content: center;
   }
-}
 
-@media (max-width: 490.98px) {
-  .contact__body {
+  .defend-text {
     margin: auto;
   }
 
-  .inlive {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
+  .ymaps-2-1-77-map {
+    max-height: 240px !important;
   }
 }
 
@@ -7025,14 +6996,6 @@ h6 {
 
   .steps-middle__content {
     width: 100%;
-  }
-}
-
-@media (max-width: 450.98px) {
-  .contacts {
-    -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
   }
 }
 
